--- a/plugin.xml
+++ b/plugin.xml
@@ -9,9 +9,15 @@
         <engine name="cordova-ios" version=">=4.3.0" />
     </engines>
 
+    <preference name="AWS_S3_BUCKET" />
+
     <dependency id="org.fathens.cordova.plugin.aws.Base" url="https://github.com/fathens/Cordova-Plugin-AWS_Base.git" commit="master" />
 
     <platform name="android">
+        <config-file target="AndroidManifest.xml" parent="application">
+            <meta-data android:name="org.fathens.aws.s3.bucket" android:value="$AWS_S3_BUCKET"/>
+        </config-file>
+
         <framework src="platforms/android/plugin.gradle" custom="true" type="gradleReference"/>
 
         <hook type="after_prepare" src="platforms/android/hooks/after_prepare.rb"/>
