--- a/plugin.xml
+++ b/plugin.xml
@@ -25,5 +25,9 @@
 
     <platform name="ios">
         <hook type="after_prepare" src="platforms/ios/hooks/after_prepare.rb"/>
+
+        <podfile swift_version="3.0">
+            <pod name="AWSS3" />
+        </podfile>
     </platform>
 </plugin>
