Javascript のインターフェースを作成

--- a/plugin.xml
+++ b/plugin.xml
@@ -11,6 +11,10 @@
 
     <preference name="AWS_S3_BUCKET" />
 
+    <js-module name="AWSS3Plugin" src="www/s3.js">
+        <clobbers target="plugin.AWS.S3"/>
+    </js-module>
+
     <dependency id="org.fathens.cordova.plugin.aws.Base" url="https://github.com/fathens/Cordova-Plugin-AWS_Base.git" commit="master" />
 
     <platform name="android">
