--- a/plugin.xml
+++ b/plugin.xml
@@ -9,7 +9,7 @@
         <engine name="cordova-ios" version=">=4.3.0" />
     </engines>
 
-    <preference name="AWS_S3_BUCKET" />
+    <preference name="AWS_S3_BUCKET_NAME" />
 
     <js-module name="AWSS3Plugin" src="www/s3.js">
         <clobbers target="plugin.AWS.S3"/>
@@ -19,7 +19,7 @@
 
     <platform name="android">
         <config-file target="AndroidManifest.xml" parent="application">
-            <meta-data android:name="org.fathens.aws.s3.bucket" android:value="$AWS_S3_BUCKET"/>
+            <meta-data android:name="org.fathens.aws.s3.bucket" android:value="$AWS_S3_BUCKET_NAME"/>
         </config-file>
 
         <framework src="platforms/android/plugin.gradle" custom="true" type="gradleReference"/>
