--- a/package.json
+++ b/package.json
@@ -2,13 +2,28 @@
   "name": "cordova-plugin-awss3",
   "version": "0.0.1",
   "description": "Cordova Plugin for AWS S3",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
+  "dependencies": {
+    "@types/lodash": "^4.14.45",
+    "cordova-plugin-aws": "github:fathens/Cordova-Plugin-AWS_Base",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.1.3",
+    "lodash": "^4.17.3",
+    "log4ts": "github:fathens/log4ts"
+  },
+  "devDependencies": {
+    "typescript": "~2.0.10"
+  },
+  "peerDependencies": {
+    "@types/lodash": "^4.14.45",
+    "lodash": "^4.17.3",
+    "typescript": "~2.0.10"
+  },
   "scripts": {
-    "postinstall": "add_plugin org.fathens.cordova.plugin.aws.S3 https://github.com/fathens/Cordova-Plugin-AWS_S3.git AWS_S3_BUCKET_NAME"
+    "build": "gulp",
+    "postinstall": "gulp && add_plugin org.fathens.cordova.plugin.aws.S3 https://github.com/fathens/Cordova-Plugin-AWS_S3.git AWS_S3_BUCKET_NAME"
   },
   "author": "f:athens",
-  "license": "MIT",
-  "dependencies": {
-    "cordova-plugin-aws": "fathens/Cordova-Plugin-AWS_Base"
-  }
+  "license": "MIT"
 }
