--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Cordova Plugin for AWS S3",
   "main": "dist/index.js",
   "dependencies": {
+    "@angular/common": "^2.4.1",
+    "@angular/platform-browser": "^2.4.1",
+    "@ionic/storage": "^1.1.7",
+    "@types/aws-sdk": "0.0.42",
     "@types/lodash": "^4.14.45",
     "cordova-plugin-aws": "github:fathens/Cordova-Plugin-AWS_Base",
     "del": "^2.2.2",
