--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.0.1",
   "description": "Cordova Plugin for AWS S3",
   "main": "dist/index.js",
+  "typings": "dist/index",
   "dependencies": {
     "@angular/common": "^2.4.1",
     "@angular/platform-browser": "^2.4.1",
     "@ionic/storage": "^1.1.7",
     "@types/lodash": "^4.14.45",
     "cordova-plugin-aws": "github:fathens/Cordova-Plugin-AWS_Base",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^3.1.3",
     "lodash": "^4.17.3",
     "log4ts": "github:fathens/log4ts"
   },
@@ -19,13 +17,14 @@
     "typescript": "~2.0.10"
   },
   "peerDependencies": {
+    "@angular/common": "^2.4.1",
     "@types/lodash": "^4.14.45",
     "lodash": "^4.17.3",
     "typescript": "~2.0.10"
   },
   "scripts": {
-    "build": "gulp",
-    "postinstall": "gulp && add_plugin org.fathens.cordova.plugin.aws.S3 https://github.com/fathens/Cordova-Plugin-AWS_S3.git AWS_S3_BUCKET_NAME"
+    "build": "tsc",
+    "postinstall": "tsc && add_plugin org.fathens.cordova.plugin.aws.S3 https://github.com/fathens/Cordova-Plugin-AWS_S3.git AWS_S3_BUCKET_NAME"
   },
   "author": "f:athens",
   "license": "MIT"
