--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
-        "declaration": false,
-        "emitDecoratorMetadata": true,
+        "declaration": true,
+        "declarationDir": "dist",
+        "outDir": "dist",
+        "emitDecoratorMetadata": false,
         "experimentalDecorators": true,
         "lib": [
             "dom",
