--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "postinstall": "tsc && add_plugin org.fathens.cordova.plugin.aws.S3 https://github.com/fathens/Cordova-Plugin-AWS_S3.git AWS_S3_BUCKET_NAME"
   },
   "author": "f:athens",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fathens/Cordova-Plugin-AWS_S3.git"
+  }
 }
