plugin_id と gitrepo は自動認識される

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "postinstall": "tsc && add_plugin org.fathens.cordova.plugin.aws.S3 https://github.com/fathens/Cordova-Plugin-AWS_S3.git AWS_S3_BUCKET_NAME"
+    "postinstall": "tsc && add_plugin AWS_S3_BUCKET_NAME"
   },
   "author": "f:athens",
   "license": "MIT",
