angular は ionic はすべて peer に指定

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "peerDependencies": {
     "@angular/common": "~2.2.1",
+    "@angular/platform-browser": "~2.2.1",
+    "@ionic/storage": "^1.1.7",
     "@types/lodash": "^4.14.45",
     "lodash": "^4.17.3",
     "typescript": "~2.0.10"
