_inject_pre を使用

--- a/package.json
+++ b/package.json
@@ -24,13 +24,9 @@
     "lodash": "^4.17.3",
     "typescript": "~2.0.10"
   },
-  "config": {
-    "envs": "AWS_S3_BUCKET_NAME"
-  },
   "scripts": {
     "build": "tsc",
-    "postinstall": "tsc && add_plugin ${npm_package_config_envs}",
-    "prestart": "web_inject ${npm_package_config_envs}"
+    "postinstall": "tsc && _inject_pre AWS_S3_BUCKET_NAME"
   },
   "author": "f:athens",
   "license": "MIT",
