--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@angular/platform-browser": "~2.2.1",
     "@ionic/storage": "^1.1.7",
     "@types/lodash": "^4.14.45",
-    "cordova-plugin-aws": "github:fathens/Cordova-Plugin-AWS_Base#feature/inject_pre",
+    "cordova-plugin-aws": "github:fathens/Cordova-Plugin-AWS_Base",
     "lodash": "^4.17.3",
     "log4ts": "github:fathens/log4ts"
   },
