Info.plist の CordovaAWS に S3 のバケット名を追加

--- a/plugin.xml
+++ b/plugin.xml
@@ -34,6 +34,13 @@
     </platform>
 
     <platform name="ios">
+        <config-file target="*-Info.plist" parent="CordovaAWS">
+            <dict>
+                <key>BucketName</key>
+                <string>$AWS_S3_BUCKET_NAME</string>
+            </dict>
+        </config-file>
+
         <config-file parent="/*" target="config.xml">
             <feature name="AWSS3Plugin">
                 <param name="ios-package" value="AwsS3"/>
