--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+    "files": [
+        "src/index.ts"
+    ],
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
         "declaration": true,
