--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cordova-plugin-awss3",
+  "name": "@cordova-plugin/aws-s3",
   "version": "0.2.0",
   "description": "Cordova Plugin for AWS S3",
   "main": "dist/index.js",
@@ -9,7 +9,7 @@
     "@angular/platform-browser": "~2.2.1",
     "@ionic/storage": "^1.1.7",
     "@types/lodash": "^4.14.45",
-    "cordova-plugin-aws": "github:fathens/Cordova-Plugin-AWS_Base",
+    "@cordova-plugin/aws-base": "github:fathens/Cordova-Plugin-AWS_Base",
     "lodash": "^4.17.3",
     "log4ts": "github:fathens/log4ts"
   },
