--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@angular/platform-browser": "~2.2.1",
     "@ionic/storage": "^1.1.7",
     "@types/lodash": "^4.14.45",
-    "@cordova-plugin/aws-base": "github:fathens/Cordova-Plugin-AWS_Base",
+    "@cordova-plugin/aws-core": "github:fathens/cordova-plugin-aws-core",
     "lodash": "^4.17.3",
     "log4ts": "github:fathens/log4ts"
   },
