--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fathens/Cordova-Plugin-AWS_S3.git"
+    "url": "https://github.com/fathens/cordova-plugin-aws-s3.git"
   }
 }
