inject は core が自動的にやってくれる

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "postinstall": "tsc && _inject_pre AWS_S3_BUCKET_NAME"
+    "postinstall": "tsc"
   },
   "author": "f:athens",
   "license": "MIT",
