--- a/plugin.xml
+++ b/plugin.xml
@@ -49,8 +49,8 @@
 
         <source-file src="platforms/ios/src/AwsS3.swift"/>
 
-        <podfile swift_version="3.0">
-            <pod name="AWSS3" version="~> 2.4.16" />
-        </podfile>
+        <framework src="AWSS3" type="podspec" spec="~> 2.4.16">
+            <bridging-header import="AWSS3/AWSS3.h" />
+        </framework>
     </platform>
 </plugin>
