--- a/plugin.xml
+++ b/plugin.xml
@@ -9,7 +9,7 @@
         <engine name="cordova-ios" version=">=4.3.0" />
     </engines>
 
-    <preference name="AWS_S3_BUCKET_NAME" />
+    <preference name="AWS_S3_BUCKET_NAME" web="true" />
 
     <js-module name="AWSS3Plugin" src="www/s3.js">
         <clobbers target="plugin.AWS.S3"/>
