--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "dist/index",
   "dependencies": {
     "@angular/common": "~2.2.1",
+    "@angular/core": "2.2.1",
     "@angular/platform-browser": "~2.2.1",
     "@ionic/storage": "^1.1.7",
     "@types/lodash": "^4.14.45",
